--- a/part1/docker-compose.yml
+++ b/part1/docker-compose.yml
@@ -1,30 +1,21 @@
 version: "2"
 
-networks:
-  loadbalance:
-    driver: bridge
-
 services:
-  web:
+  nginx-proxy:
     restart: always
-    build:
-      context: .
-      dockerfile: Dockerfile.web
-    networks: 
-      - loadbalance
-    container_name: web
-    command: ["python", "hello.py"]
-  
-  nginx:
-    build:
-      context: .
-      dockerfile: Dockerfile.nginx
-    restart: always
+    image: jwilder/nginx-proxy:alpine
+    container_name: nginx-proxy
     ports:
-      - "443:443/tcp"
       - "80:80/tcp"
-    networks: 
-      - loadbalance
-    container_name: nginx
+      - "443:443/tcp"
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock:ro
     depends_on:
-      - web
+      - whoami
+
+  whoami:
+    restart: always
+    image: jwilder/whoami
+    container_name: whoami
+    environment:
+      - VIRTUAL_HOST=whoami.local
