--- a/part1/docker-compose.yml
+++ b/part1/docker-compose.yml
@@ -11,21 +11,41 @@ services:
     depends_on:
       - whoami
     volumes:
-      - /tmp/nginx:/etc/nginx/conf.d
+      - "/etc/nginx/conf.d"
+      - "/etc/nginx/vhost.d"
+      - "/usr/share/nginx/html"
+      - "./volumes/proxy/certs:/etc/nginx/certs:ro"
   
   dockergen:
     image: jwilder/docker-gen
-    command: -notify-sighup nginx -watch /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+    container_name: dockergen
+    command: -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
     volumes_from:
       - nginx
     volumes:
-      - /var/run/docker.sock:/tmp/docker.sock:ro
-      - ./nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl
+      - "/var/run/docker.sock:/tmp/docker.sock:ro"
+      - "./nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro"
+
+  letsencrypt-nginx-proxy-companion:
+    restart: always
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    container_name: letsencrypt-nginx-proxy-companion
+    depends_on:
+      - dockergen
+    volumes_from:
+      - nginx
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - "./volumes/proxy/certs:/etc/nginx/certs:rw"
+    environment:
+      - NGINX_DOCKER_GEN_CONTAINER=dockergen
   
   whoami:
     restart: always
     image: jwilder/whoami
     container_name: whoami
     environment:
-      - VIRTUAL_PROTO=https
-      - VIRTUAL_HOST=whoami.local
+      - VIRTUAL_HOST=whoami.com
+      - VIRTUAL_PORT=8000
+      - LETSENCRYPT_HOST=whoami.com
+      - LETSENCRYPT_EMAIL=email@gmail.com
